--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         </div><!---video-topo--->
                         <div class="txt-topo-site efeito-txt-topo">
                             <h1>
-                                Os melhores freelancer do mercado para realizar o seu projeto!
+                                Os melhores freelancers do mercado para realizar o seu projeto!
                             </h1>
                             <ul>
                                 <li><i class="bi bi-caret-right"></i>Economiza Tempo: Encontre rapidamente o freelancer ideal
