--- a/planos-empresa.html
+++ b/planos-empresa.html
@@ -37,6 +37,13 @@
                 </li>
 
                 <li class="item-menu">
+                    <a href="ajuda.html">
+                        <span class="icon"><i class="bi bi-code-square"></i></span>
+                        <span class="txt-link">Projetos</span>
+                    </a>
+                </li>
+
+                <li class="item-menu">
                     <a href="userempresa.html">
                         <span class="icon"><i class="bi bi-bar-chart-steps"></i></span>
                         <span class="txt-link" href="index.html">Propostas</span>
@@ -101,12 +108,12 @@
                         <h2>Plano Mensal</h2>
                         <p><strong>R$ 49,99</strong></p>
                         <ul>
-                            <li><i class="bi bi-person-check"></i>Acesso a Talentos Qualificados</li>
-                            <li><i class="bi bi-clock-history"></i>Economia de Tempo</li>
-                            <li><i class="bi bi-file-earmark-check"></i>Maior Garantia de Entrega</li>
-                            <li><i class="bi bi-filter"></i>Filtragem Avançada</li>
-                            <li><i class="bi bi-headset"></i>Suporte Prioritário</li>
-                            <li><i class="bi bi-graph-up-arrow"></i>Relatórios e Insights</li>
+                            <li><i class="bi bi-check2-square"></i>Acesso a Talentos Qualificados</li>
+                            <li><i class="bi bi-check2-square"></i>Economia de Tempo</li>
+                            <li><i class="bi bi-check2-square"></i>Garantia de Entrega</li>
+                            <li><i class="bi bi-check2-square"></i>Filtragem Básica de Candidatos</li>
+                            <li><i class="bi bi-check2-square"></i>Acesso a Tutoriais Básicos</li>
+                            <li><i class="bi bi-check2-square"></i>Candidatos em Destaque</li>
                         </ul>
                         <button class="btn-plano">Assinar</button>
                         </div>
@@ -120,12 +127,12 @@
                         <h2>Plano Semestral</h2>
                         <p><strong>R$ 279,99</strong></p>
                         <ul>
-                            <li><i class="bi bi-person-check"></i>Acesso a Talentos Qualificados</li>
-                            <li><i class="bi bi-clock-history"></i>Economia de Tempo</li>
-                            <li><i class="bi bi-file-earmark-check"></i>Maior Garantia de Entrega</li>
-                            <li><i class="bi bi-filter"></i>Filtragem Avançada</li>
-                            <li><i class="bi bi-headset"></i>Suporte Prioritário</li>
-                            <li><i class="bi bi-graph-up-arrow"></i>Relatórios e Insights</li>
+                            <li><i class="bi bi-check2-square"></i>Todos os Benefícios do Plano Mensal</li>
+                            <li><i class="bi bi-check2-square"></i>Consultoria de Contratação (1 sessão)</li>
+                            <li><i class="bi bi-check2-square"></i>Suporte Prioritário</li>
+                            <li><i class="bi bi-check2-square"></i>Relatórios Mensais de Desempenho</li>
+                            <li><i class="bi bi-check2-square"></i>Destaque para Anúncios de Vagas</li>
+                            <li><i class="bi bi-check2-square"></i>Eventos Virtuais de Networking</li>
                         </ul>
                         <button class="btn-plano">Assinar</button>
                         </div>
@@ -138,12 +145,12 @@
                         <h2>Plano Anual</h2>
                         <p><strong>R$ 539,99</strong></p>
                         <ul>
-                            <li><i class="bi bi-person-check"></i>Acesso a Talentos Qualificados</li>
-                            <li><i class="bi bi-clock-history"></i>Economia de Tempo</li>
-                            <li><i class="bi bi-file-earmark-check"></i>Maior Garantia de Entrega</li>
-                            <li><i class="bi bi-filter"></i>Filtragem Avançada</li>
-                            <li><i class="bi bi-headset"></i>Suporte Prioritário</li>
-                            <li><i class="bi bi-graph-up-arrow"></i>Relatórios e Insights</li>
+                            <li><i class="bi bi-check2-square"></i>Todos os Benefícios do Plano Semestral</li>
+                            <li><i class="bi bi-check2-square"></i>Consultoria de Contratação (3 sessões)</li>
+                            <li><i class="bi bi-check2-square"></i>Perfil Personalizado da Empresa</li>
+                            <li><i class="bi bi-check2-square"></i>Análises Detalhadas de Performance</li>
+                            <li><i class="bi bi-check2-square"></i>Base Exclusiva de Talentos</li>
+                            <li><i class="bi bi-check2-square"></i>Suporte Dedicado 24/7</li>
                         </ul>
                         <button class="btn-plano">Assinar</button>
                     </div>
@@ -166,24 +173,5 @@
       <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
       </script>
-
-    <footer>
-        <div class="interface">
-            <div class="footer-1">
-                <div class="flex">
-                    <div class="btn-redes">
-                        <a href="#"><i class="bi bi-instagram"></i></a>
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                        <a href="#"><i class="bi bi-linkedin"></i></a>
-                    </div><!--btn-redes-->
-                </div><!--flex-->
-            </div><!--footer-1-->
-
-            <div class="footer-2">
-                <p><i class="bi bi-envelope"></i><a href="mailto:contato@devhunt.com.br"> contato@devhunt.com.br</a></p>
-                <p class="desc">© 2024 www.devhunt.com.br | Todos os direitos reservados.</p>
-            </div><!--footer-2-->
-        </div><!--interface-->
-    </footer><!--rodapé-->
 </body>
 </html>
