--- a/userempresa.html
+++ b/userempresa.html
@@ -42,6 +42,13 @@
                     </a>
                 </li>
 
+                <li class="item-menu">
+                    <a href="ajuda.html">
+                        <span class="icon"><i class="bi bi-code-square"></i></span>
+                        <span class="txt-link">Projetos</span>
+                    </a>
+                </li>
+
                 <li class="item-menu ativo">
                     <a href="userempresa.html">
                         <span class="icon"><i class="bi bi-bar-chart-steps"></i></span>
