--- a/userfreela.html
+++ b/userfreela.html
@@ -54,8 +54,15 @@
                     </a>
                 </li>
 
+                <li class="item-menu">
+                    <a href="ajuda.html">
+                        <span class="icon"><i class="bi bi-code-square"></i></span>
+                        <span class="txt-link">Projetos</span>
+                    </a>
+                </li>
+
                 <li class="item-menu ativo">
-                    <a href="userempresa.html">
+                    <a href="userfreela.html">
                         <span class="icon"><i class="bi bi-bar-chart-steps"></i></span>
                         <span class="txt-link" href="index.html">Propostas</span>
                     </a>
@@ -69,7 +76,7 @@
                 </li>
 
                 <li class="item-menu">
-                    <a href="planos.html">
+                    <a href="planos-empresa.html">
                         <span class="icon"><i class="bi bi-clipboard-check-fill"></i></span>
                         <span class="txt-link">Planos</span>
                     </a>
