--- a/planos.html
+++ b/planos.html
@@ -99,14 +99,13 @@
                         </div>
                         <div class ="plano1">
                         <h2>Plano Mensal</h2>
-                        <p><strong>R$ 24,99/mês</strong></p>
+                        <p><strong>R$ 24,99</strong></p>
                         <ul>
-                            <li><i class="bi bi-person-check"></i>Acesso a Talentos Qualificados</li>
-                            <li><i class="bi bi-clock-history"></i>Economia de Tempo</li>
-                            <li><i class="bi bi-file-earmark-check"></i>Maior Garantia de Entrega</li>
-                            <li><i class="bi bi-filter"></i>Filtragem Avançada</li>
-                            <li><i class="bi bi-headset"></i>Suporte Prioritário</li>
-                            <li><i class="bi bi-graph-up-arrow"></i>Relatórios e Insights</li>
+                            <li><i class="bi bi-check2-square"></i>Acesso Prioritário a Projetos</li>
+                            <li><i class="bi bi-check2-square"></i>Credibilidade Aumentada</li>
+                            <li><i class="bi bi-check2-square"></i>Mais Convites Diretos</li>
+                            <li><i class="bi bi-check2-square"></i>Perfil Verificado</li>
+                            <li><i class="bi bi-check2-square"></i>Apoio e Suporte Personalizado</li>
                         </ul>
                         <button class="btn-plano">Assinar</button>
                         </div>
@@ -118,14 +117,13 @@
                         </div>
                         <div class ="plano1">
                         <h2>Plano Semestral</h2>
-                        <p><strong>R$ 129,99/mês </strong></p>
+                        <p><strong>R$ 129,99 </strong></p>
                         <ul>
-                            <li><i class="bi bi-person-check"></i>Acesso a Talentos Qualificados</li>
-                            <li><i class="bi bi-clock-history"></i>Economia de Tempo</li>
-                            <li><i class="bi bi-file-earmark-check"></i>Maior Garantia de Entrega</li>
-                            <li><i class="bi bi-filter"></i>Filtragem Avançada</li>
-                            <li><i class="bi bi-headset"></i>Suporte Prioritário</li>
-                            <li><i class="bi bi-graph-up-arrow"></i>Relatórios e Insights</li>
+                            <li><i class="bi bi-check2-square"></i>Todos os Benefícios do Plano Mensal</li>
+                            <li><i class="bi bi-check2-square"></i>Curriculo Personalizado</li>
+                            <li><i class="bi bi-check2-square"></i>Suporte Prioritário</li>
+                            <li><i class="bi bi-check2-square"></i>Ferramentas Exclusivas</li>
+                            <li><i class="bi bi-check2-square"></i>Taxas Reduzidas</li>
                         </ul>
                         <button class="btn-plano">Assinar</button>
                         </div>
@@ -136,14 +134,13 @@
                         </div>
                         <div class ="plano1">
                         <h2>Plano Anual</h2>
-                        <p><strong>R$ 249,99/mês </strong></p>
+                        <p><strong>R$ 249,99 </strong></p>
                         <ul>
-                            <li><i class="bi bi-person-check"></i>Acesso a Talentos Qualificados</li>
-                            <li><i class="bi bi-clock-history"></i>Economia de Tempo</li>
-                            <li><i class="bi bi-file-earmark-check"></i>Maior Garantia de Entrega</li>
-                            <li><i class="bi bi-filter"></i>Filtragem Avançada</li>
-                            <li><i class="bi bi-headset"></i>Suporte Prioritário</li>
-                            <li><i class="bi bi-graph-up-arrow"></i>Relatórios e Insights</li>
+                            <li><i class="bi bi-check2-square"></i>Todos os Benefícios do Plano Mensal</li>
+                            <li><i class="bi bi-check2-square"></i>Consultas com Especialistas</li>
+                            <li><i class="bi bi-check2-square"></i>Taxas Reduzidas</li>
+                            <li><i class="bi bi-check2-square"></i>Perfil Super Verificado</li>
+                            <li><i class="bi bi-check2-square"></i>Destaque na Home do Site</li>
                         </ul>
                         <button class="btn-plano">Assinar</button>
                     </div>
@@ -167,23 +164,6 @@
         new window.VLibras.Widget('https://vlibras.gov.br/app');
       </script>
 
-    <footer>
-        <div class="interface">
-            <div class="footer-1">
-                <div class="flex">
-                    <div class="btn-redes">
-                        <a href="#"><i class="bi bi-instagram"></i></a>
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                        <a href="#"><i class="bi bi-linkedin"></i></a>
-                    </div><!--btn-redes-->
-                </div><!--flex-->
-            </div><!--footer-1-->
-
-            <div class="footer-2">
-                <p><i class="bi bi-envelope"></i><a href="mailto:contato@devhunt.com.br"> contato@devhunt.com.br</a></p>
-                <p class="desc">© 2024 www.devhunt.com.br | Todos os direitos reservados.</p>
-            </div><!--footer-2-->
-        </div><!--interface-->
-    </footer><!--rodapé-->
 </body>
 </html>
+
