--- a/planos-freelancer.html
+++ b/planos-freelancer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planos</title>
-    <link rel="stylesheet" href="style-planosempresas.css">
+    <link rel="stylesheet" href="style-planos-login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <script src="script-acessibilidade.js" defer></script>
@@ -33,6 +33,13 @@
                     <a href="index.html">
                         <span class="icon"><i class="bi bi-house" title="Início"></i></span>
                         <span class="txt-link" href="index.html">Início</span>
+                    </a>
+                </li>
+
+                <li class="item-menu">
+                    <a href="ajuda.html">
+                        <span class="icon"><i class="bi bi-code-square"></i></span>
+                        <span class="txt-link">Projetos</span>
                     </a>
                 </li>
 
@@ -106,6 +113,7 @@
                             <li><i class="bi bi-check2-square"></i>Mais Convites Diretos</li>
                             <li><i class="bi bi-check2-square"></i>Perfil Verificado</li>
                             <li><i class="bi bi-check2-square"></i>Apoio e Suporte Personalizado</li>
+                            <li><i class="bi bi-check2-square"></i>Acesso a Tutoriais Básicos</li>
                         </ul>
                         <button class="btn-plano">Assinar</button>
                         </div>
@@ -120,10 +128,11 @@
                         <p><strong>R$ 129,99 </strong></p>
                         <ul>
                             <li><i class="bi bi-check2-square"></i>Todos os Benefícios do Plano Mensal</li>
-                            <li><i class="bi bi-check2-square"></i>Curriculo Personalizado</li>
+                            <li><i class="bi bi-check2-square"></i>Currículo Personalizado</li>
                             <li><i class="bi bi-check2-square"></i>Suporte Prioritário</li>
                             <li><i class="bi bi-check2-square"></i>Ferramentas Exclusivas</li>
                             <li><i class="bi bi-check2-square"></i>Taxas Reduzidas</li>
+                            <li><i class="bi bi-check2-square"></i>Acesso a Webinars de Aperfeiçoamento</li>
                         </ul>
                         <button class="btn-plano">Assinar</button>
                         </div>
@@ -136,11 +145,12 @@
                         <h2>Plano Anual</h2>
                         <p><strong>R$ 249,99 </strong></p>
                         <ul>
-                            <li><i class="bi bi-check2-square"></i>Todos os Benefícios do Plano Mensal</li>
-                            <li><i class="bi bi-check2-square"></i>Consultas com Especialistas</li>
-                            <li><i class="bi bi-check2-square"></i>Taxas Reduzidas</li>
+                            <li><i class="bi bi-check2-square"></i>Todos os Benefícios do Plano Semestral</li>
+                            <li><i class="bi bi-check2-square"></i>Sessões de Mentoria Profissional</li>
+                            <li><i class="bi bi-check2-square"></i>Conexão com Empresas Premium</li>
                             <li><i class="bi bi-check2-square"></i>Perfil Super Verificado</li>
-                            <li><i class="bi bi-check2-square"></i>Destaque na Home do Site</li>
+                            <li><i class="bi bi-check2-square"></i>Ferramenta de Portfólio Avançado</li>
+                            <li><i class="bi bi-check2-square"></i>Apoio Dedicado 24/7</li>
                         </ul>
                         <button class="btn-plano">Assinar</button>
                     </div>
