--- a/userfreela.html
+++ b/userfreela.html
@@ -76,7 +76,7 @@
                 </li>
 
                 <li class="item-menu">
-                    <a href="planos-empresa.html">
+                    <a href="planos-freelancer.html">
                         <span class="icon"><i class="bi bi-clipboard-check-fill"></i></span>
                         <span class="txt-link">Planos</span>
                     </a>
