--- a/planos.html
+++ b/planos.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <script src="/js/acessibilidade.js" defer></script>
-    <link rel="stylesheet" type="text/css" href="css/acessibilidade.css">
+    <link rel="stylesheet" type="text/css" href="style-acessibilidade.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src=""></script>
@@ -18,7 +18,7 @@
 
         <div class="logo">
             <a href="/index.html">
-                <img id="imagemAcessibilidade" src="/img/logo.png" alt="Dev Hunt" />
+                <img id="imagemAcessibilidade" src="img-logo.png" alt="Dev Hunt" />
             </a><!--link-logo-->
         </div><!--logo-->
 
