--- a/suporte.html
+++ b/suporte.html
@@ -43,7 +43,7 @@
                 </li>
 
                 <li class="item-menu">
-                    <a href="ajuda.html">
+                    <a href="projetos.html">
                         <span class="icon"><i class="bi bi-code-square"></i></span>
                         <span class="txt-link">Projetos</span>
                     </a>
@@ -57,7 +57,7 @@
                 </li>
                 
                 <li class="item-menu">
-                    <a href="quemsomos.html">
+                    <a href="perfil.html">
                         <span class="icon"><i class="bi bi-file-person" title="quemsomos"></i></span>
                         <span class="txt-link">Perfil</span>
                     </a>
@@ -186,8 +186,8 @@
                         <div class="links-rapidos">
                             <h2>Contatos</h2>
                             <h4><strong>Email:</strong></h4><p> suporte@devhunt.com</p>
-                            <h4><strong>Telefone:</strong></h4><p> (11) 1234-5678</p>
-                            <h4><strong>Horário de Atendimento:</strong></h4><p>Seg. a Sex - 9h às 18h</p>
+                            <h4><strong>Telefone:</strong></h4><p> (21) 1234-5678</p>
+                            <h4><strong>Horário de Atendimento:</strong></h4><p>Seg. a Sex  - 9h às 18h</p>
                     
                             <h4><strong>Perguntas Frequentes:</strong></h4>
                             <ul>
@@ -204,14 +204,6 @@
                 </div><!---flex-->
             </div><!---interface-->
         </section><!--box-suporte-->
-
-        <section class="formulario">
-            <div class="interface">
-                <div class="flex">
-
-                </div><!--flex-->
-            </div><!--interface-->
-        </section><!--formulario-->
     </div>
 
         <div vw class="enabled">
