--- a/admin.html.html
+++ b/admin.html.html
@@ -16,8 +16,8 @@
       <!--menu-lateral -->
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <div class="sidebar-brand-wrapper d-none d-lg-flex align-items-center justify-content-center fixed-top">
-          <a class="sidebar-brand brand-logo" href="index.html"><img src="/img/" alt="logo" /></a>
-          <a class="sidebar-brand brand-logo-mini" href="index.html"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
+          <a class="sidebar-brand brand-logo" href="index.html"><img src="" alt="Dev Hunt" /></a>
+          <a class="sidebar-brand brand-logo-mini" href=""><img src="" alt="Dev" /></a>
         </div>
         <ul class="nav">
           <li class="nav-item profile">
@@ -81,7 +81,7 @@
             </a>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="pages/tables/basic-table.html">
+            <a class="nav-link" href="#">
               <span class="menu-icon">
                 <i class="mdi mdi-table-large"></i>
               </span>
@@ -132,15 +132,15 @@
                   <span class="count bg-success"></span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="messageDropdown">
-                  <h6 class="p-3 mb-0">Messages</h6>
+                  <h6 class="p-3 mb-0">Mensagens</h6>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item preview-item">
                     <div class="preview-thumbnail">
                       <img src="assets/images/rostos/face4.jpg" alt="image" class="rounded-circle profile-pic">
                     </div>
                     <div class="preview-item-content">
-                      <p class="preview-subject ellipsis mb-1">Mark send you a message</p>
-                      <p class="text-muted mb-0"> 1 Minutes ago </p>
+                      <p class="preview-subject ellipsis mb-1">João Mandou mensgem</p>
+                      <p class="text-muted mb-0"> 1 Minutos atrás </p>
                     </div>
                   </a>
                   <div class="dropdown-divider"></div>
@@ -149,8 +149,8 @@
                       <img src="assets/images/rostos/face2.jpg" alt="image" class="rounded-circle profile-pic">
                     </div>
                     <div class="preview-item-content">
-                      <p class="preview-subject ellipsis mb-1">Cregh send you a message</p>
-                      <p class="text-muted mb-0"> 15 Minutes ago </p>
+                      <p class="preview-subject ellipsis mb-1">Erik Respondeu</p>
+                      <p class="text-muted mb-0"> 15 Minutos atrás </p>
                     </div>
                   </a>
                   <div class="dropdown-divider"></div>
@@ -159,12 +159,12 @@
                       <img src="assets/images/rostos/face3.jpg" alt="image" class="rounded-circle profile-pic">
                     </div>
                     <div class="preview-item-content">
-                      <p class="preview-subject ellipsis mb-1">Profile picture updated</p>
-                      <p class="text-muted mb-0"> 18 Minutes ago </p>
+                      <p class="preview-subject ellipsis mb-1">Compartilhou uma foto</p>
+                      <p class="text-muted mb-0"> 18 Minutos atrás </p>
                     </div>
                   </a>
                   <div class="dropdown-divider"></div>
-                  <p class="p-3 mb-0 text-center">4 new messages</p>
+                  <p class="p-3 mb-0 text-center">4 Novas Menssagens</p>
                 </div>
               </li>
               <li class="nav-item dropdown border-left">
@@ -183,8 +183,8 @@
                       </div>
                     </div>
                     <div class="preview-item-content">
-                      <p class="preview-subject mb-1">Event today</p>
-                      <p class="text-muted ellipsis mb-0"> Just a reminder that you have an event today </p>
+                      <p class="preview-subject mb-1">Eventos da Semana</p>
+                      <p class="text-muted ellipsis mb-0">Fechamento mensal para freelaces...</p>
                     </div>
                   </a>
                   <div class="dropdown-divider"></div>
@@ -195,8 +195,8 @@
                       </div>
                     </div>
                     <div class="preview-item-content">
-                      <p class="preview-subject mb-1">Settings</p>
-                      <p class="text-muted ellipsis mb-0"> Update dashboard </p>
+                      <p class="preview-subject mb-1">Configuraçãoa</p>
+                      <p class="text-muted ellipsis mb-0"> Upgrade da Pagina </p>
                     </div>
                   </a>
                   <div class="dropdown-divider"></div>
@@ -207,12 +207,12 @@
                       </div>
                     </div>
                     <div class="preview-item-content">
-                      <p class="preview-subject mb-1">Launch Admin</p>
-                      <p class="text-muted ellipsis mb-0"> New admin wow! </p>
+                      <p class="preview-subject mb-1">Links</p>
+                      <p class="text-muted ellipsis mb-0"> Novo link gerado! </p>
                     </div>
                   </a>
                   <div class="dropdown-divider"></div>
-                  <p class="p-3 mb-0 text-center">See all notifications</p>
+                  <p class="p-3 mb-0 text-center">Sem novas notificações</p>
                 </div>
               </li>
               <li class="nav-item dropdown">
