--- a/projetos.html
+++ b/projetos.html
@@ -175,7 +175,7 @@
                     <p><strong>Descrição:</strong> Projeto para desenvolvimento de site responsivo</p>
                     <p><strong>Empresa:</strong> Startup XYZ</p>
                     <p><strong>Prazo:</strong> 6 meses</p>
-                    <p><strong>Pamento:</strong> até 10 mil</p>
+                    <p><strong>Pagamento:</strong> até 10 mil</p>
                     <div class="btn-convite">
                         <p><span>Deseja participar?</span></p>
                         <button class="btn-aceitar">Aceitar</button>
