--- a/admin.html.html
+++ b/admin.html.html
@@ -7,6 +7,9 @@
   
     <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
     
+    <link rel="stylesheet" type="text/css" href="style-acessibilidade.css">
+    <script src="script-acessibilidade.js" defer></script>
+    
     <link rel="stylesheet" href="assets/css/style.css">
   
     <link rel="shortcut icon" href="assets/images/favicon.png" />
