--- a/pages/charts/chartjs.html
+++ b/pages/charts/chartjs.html
@@ -137,7 +137,7 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item preview-item">
                     <div class="preview-thumbnail">
-                      <img src="assets/images/rostos/face4.jpg" alt="image" class="rounded-circle profile-pic">
+                      <img src="/assets/images/rostos/face4.jpg" alt="image" class="rounded-circle profile-pic">
                     </div>
                     <div class="preview-item-content">
                       <p class="preview-subject ellipsis mb-1">João Mandou mensgem</p>
@@ -147,7 +147,7 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item preview-item">
                     <div class="preview-thumbnail">
-                      <img src="assets/images/rostos/face2.jpg" alt="image" class="rounded-circle profile-pic">
+                      <img src="/assets/images/rostos/face2.jpg" alt="image" class="rounded-circle profile-pic">
                     </div>
                     <div class="preview-item-content">
                       <p class="preview-subject ellipsis mb-1">Erik Respondeu</p>
@@ -157,7 +157,7 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item preview-item">
                     <div class="preview-thumbnail">
-                      <img src="assets/images/rostos/face3.jpg" alt="image" class="rounded-circle profile-pic">
+                      <img src="/assets/images/rostos/face3.jpg" alt="image" class="rounded-circle profile-pic">
                     </div>
                     <div class="preview-item-content">
                       <p class="preview-subject ellipsis mb-1">Compartilhou uma foto</p>
@@ -262,11 +262,11 @@
         <div class="main-panel">
           <div class="content-wrapper">
             <div class="page-header">
-              <h3 class="page-title"> Chart-js </h3>
+              <h3 class="page-title"> Graficos </h3>
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="#">Charts</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Chart-js</li>
+                  <li class="breadcrumb-item"><a href="#">Tendências</a></li>
+                  <li class="breadcrumb-item active" aria-current="page">Estimativa Grafica</li>
                 </ol>
               </nav>
             </div>
@@ -274,7 +274,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Line chart</h4>
+                    <h4 class="card-title">Levantamento Anual</h4>
                     <canvas id="lineChart" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -282,7 +282,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Referências</h4>
                     <canvas id="barChart" style="height:230px"></canvas>
                   </div>
                 </div>
@@ -292,7 +292,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Area chart</h4>
+                    <h4 class="card-title">Balanceamento Semanal</h4>
                     <canvas id="areaChart" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -300,7 +300,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Doughnut chart</h4>
+                    <h4 class="card-title">Engajamentos</h4>
                     <canvas id="doughnutChart" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -310,7 +310,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Pie chart</h4>
+                    <h4 class="card-title">Valores Apurados</h4>
                     <canvas id="pieChart" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -318,7 +318,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Scatter chart</h4>
+                    <h4 class="card-title">Tabela </h4>
                     <canvas id="scatterChart" style="height:250px"></canvas>
                   </div>
                 </div>
