--- a/planos.html
+++ b/planos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style-planos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
-    <script src="/js/acessibilidade.js" defer></script>
+    <script src="script-acessibilidade.js" defer></script>
     <link rel="stylesheet" type="text/css" href="style-acessibilidade.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -120,8 +120,7 @@
         </div><!--btn-fixo-->
         <div id="content">
             <h1>Nossos Planos</h1>
-        <div class="planos-container">
-            <div class="planos">
+        <div class="planos-container">        
                 <div class="plano">
                     <div class="plano-icon">
                         <i class="bi bi-person-workspace"></i>
@@ -154,7 +153,6 @@
                     </ul>
                     <button class="btn-plano">Assinar</button>
                 </div>
-            </div>
         </div>
         </div>
         
