--- a/userfreela.html
+++ b/userfreela.html
@@ -26,7 +26,7 @@
         <nav class="menu-lateral">
 
             <div class="logo-uf">
-                <a href="/index.html">
+                <a href="index.html">
                     <img id="imagemAcessibilidade" src="img-logo.png" alt="Dev Hunt" />
                 </a><!--link-logo-->
             </div><!--logo-->
@@ -58,7 +58,7 @@
                 </li>
                 
                 <li class="item-menu">
-                    <a href="quemsomos.html">
+                    <a href="perfil.html">
                         <span class="icon"><i class="bi bi-file-person" title="quemsomos"></i></span>
                         <span class="txt-link">Perfil</span>
                     </a>
