--- a/useroufreela.html
+++ b/useroufreela.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="empresaoufreela.css">
+    <link rel="stylesheet" href="style-empresaoufreela.css">
     <link rel="stylesheet" href="style-acessibilidade.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="login.js" defer></script>
