--- a/planos.html
+++ b/planos.html
@@ -17,7 +17,7 @@
     <header class="menu-principal">
 
         <div class="logo">
-            <a href="/index.html">
+            <a href="index.html">
                 <img id="imagemAcessibilidade" src="img-logo.png" alt="Dev Hunt" />
             </a><!--link-logo-->
         </div><!--logo-->
