--- a/userempresa.html
+++ b/userempresa.html
@@ -25,7 +25,7 @@
         <nav class="menu-lateral">
 
             <div class="logo-ue">
-                <a href="/index.html">
+                <a href="index.html">
                     <img id="imagemAcessibilidade" src="img-logo.png" alt="Dev Hunt" />
                 </a><!--link-logo-->
             </div><!--logo-->
