atualizaçaõ do banco de dados

--- a/pagerro.html
+++ b/pagerro.html
@@ -148,7 +148,7 @@
             <div class="left">
                 <p></p>
                 <h4>Desculpe, página não encontrada.</h4>
-                <a href="#" class="btn">Recarregar</a>
+                <a href="login.php" class="btn">Recarregar</a>
             </div>
             <div class="right">
                 <img src="img-astronauta.png" alt="Imagem de erro 404">
