todas as paginas logadas

--- a/graficos.html
+++ b/graficos.html
@@ -14,7 +14,7 @@
       <!--menu-lateral -->
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <div class="sidebar-brand-wrapper d-none d-lg-flex align-items-center justify-content-center fixed-top">
-          <a class="sidebar-brand brand-logo" href="index.html"><img src="" alt="Dev Hunt" /></a>
+          <a class="sidebar-brand brand-logo" href="index.php"><img src="" alt="Dev Hunt" /></a>
           <a class="sidebar-brand brand-logo-mini" href=""><img src="" alt="Dev" /></a>
         </div>
         <ul class="nav">
@@ -105,7 +105,7 @@
         <!-- -->
         <nav class="navbar p-0 fixed-top d-flex flex-row">
           <div class="navbar-brand-wrapper d-flex d-lg-none align-items-center justify-content-center">
-            <a class="navbar-brand brand-logo-mini" href="index.html"><img src="" alt="logo" /></a>
+            <a class="navbar-brand brand-logo-mini" href="index.php"><img src="" alt="logo" /></a>
           </div>
           <div class="navbar-menu-wrapper flex-grow d-flex align-items-stretch">
             <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
