--- a/perfil.html
+++ b/perfil.html
@@ -11,7 +11,7 @@
 
 <main class="perfil-container">
     <!-- Botão de Voltar -->
-    <a href="index.html">
+    <a href="index.php">
         <button class="btn-voltar"><i class="bi bi-chevron-left"></i></button>
       </a>
       
