--- a/suporte.html
+++ b/suporte.html
@@ -25,7 +25,7 @@
         <nav class="menu-lateral">
 
             <div class="logo-ue">
-                <a href="/index.html">
+                <a href="/index.php">
                     <img id="imagemAcessibilidade" src="img-logo.png" alt="Dev Hunt" />
                 </a><!--link-logo-->
             </div><!--logo-->
@@ -36,9 +36,9 @@
     
             <ul>
                 <li class="item-menu">
-                    <a href="index.html">
+                    <a href="index.php">
                         <span class="icon"><i class="bi bi-house" title="Início"></i></span>
-                        <span class="txt-link" href="index.html">Início</span>
+                        <span class="txt-link" href="index.php">Início</span>
                     </a>
                 </li>
 
@@ -52,7 +52,7 @@
                 <li class="item-menu">
                     <a href="userempresa.html">
                         <span class="icon"><i class="bi bi-bar-chart-steps"></i></span>
-                        <span class="txt-link" href="index.html">Propostas</span>
+                        <span class="txt-link" href="index.php">Propostas</span>
                     </a>
                 </li>
                 
