--- a/useroufreela.html
+++ b/useroufreela.html
@@ -15,7 +15,7 @@
         <div class="container">
 
             <div class="logo-ef">
-                <a href="/index.html">
+                <a href="/index.php">
                     <img id="imagemAcessibilidade" src="img-logo.png" alt="Dev Hunt" />
                 </a><!--link-logo-->
             </div><!--logo-->
