--- a/altersenha.html
+++ b/altersenha.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main class="container-altersenha">
-    <h1>Editar Perfil</h1>
+    <h1>Editar Senha</h1>
     
     <form class="formulario-altersenha">
       <!-- Alterar senha -->
